--- a/styles/keymap-display.less
+++ b/styles/keymap-display.less
@@ -5,12 +5,13 @@
 @import "ui-variables";
 
 .atom-keymap-display-package {
+  overflow: auto;
 
   .content {
     text-align: center;
 
     .main-heading {
-      padding: 1em;
+      padding: 0.5em;
     }
 
     ul {
@@ -26,7 +27,7 @@
         span {
           display: table-cell;
           border: 1px solid black;
-          padding: 1em;
+          padding: 0.5em;
         }
       }
     }
