--- a/styles/keymap-display.less
+++ b/styles/keymap-display.less
@@ -15,6 +15,29 @@
       padding: 0.5em;
     }
 
+    .group-buttons {
+      ul {
+        padding: 0;
+        margin: 0;
+        list-style-type: none;
+
+        li {
+          display: inline-block;
+          padding: 10px;
+          margin: 10px;
+          cursor: pointer;
+          background-color: white;
+          color: black;
+          border: 1px solid black;
+        }
+
+        li.selected {
+          background-color: rgb(185, 36, 36);
+          color: white;
+        }
+      }
+    }
+
     ul {
       display: table;
       width: 100%;
