--- a/styles/keymap-display.less
+++ b/styles/keymap-display.less
@@ -4,9 +4,8 @@
 // for a full listing of what's available.
 @import "ui-variables";
 
-
-atom-panel.modal {
-  max-width: none !important;
+atom-panel-container.modal[data-keymap-display="open"] atom-panel.modal  {
+  max-width: none;
 }
 
 .atom-keymap-display-package {
