bug fix for atom ui themes

--- a/styles/keymap-display.less
+++ b/styles/keymap-display.less
@@ -6,6 +6,9 @@
 
 atom-panel-container.modal[data-keymap-display="open"] atom-panel.modal  {
   max-width: none;
+  left: 0;
+  width: auto;
+  margin: 0;
 }
 
 .search-input {
